remove ln_info_lite
